--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# sensitive information
+/components/Files/CV.pdf
+Password.jsx
+/components/Password.jsx
+
